Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
   --green:  #2E8B57;
     /* define the amount of space to be given from within the element or from outside the element whenever a scroll event occurs. Does not apply when regularly scrolling because there is no snap position, only href will have a snap position*/
   scroll-padding-top:14vh;
-  overflow-x:hidden;
 }
 *{
   box-sizing:border-box;
